Updated index page

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         }
 
         header {
-            background-color: rgb(244, 144, 6);
+            background-color: rgb(251, 171, 60);
             padding: 10px;
-            color: rgba(0, 99, 239, 0.93);
+            color: #1732deed;
             font-size: 48px;
             font-weight: bold;
             width: 100%;
@@ -79,7 +79,12 @@
 
     <a href='homework-01/xiuyucao_hw1.html'>
         <img src='webpage_image/1.png' alt='Homework 1'>
-        <p>Homework 1</p>
+        <p>--- Homework 1 ---<br><br>R practice<br>basic visualization</p>
+    </a>
+
+    <a href='homework-02/xiuyucao_hw2.html'>
+        <img src='webpage_image/2.png' alt='Homework 2'>
+        <p>--- Homework 2 ---<br><br>covariance, correlation & distance<br>multivariate distribution<br>PCA</p>
     </a>
 
 </body>
