Updated index page image

--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
             width: 45%;
             margin: 10px;
             text-decoration: none;
-            color: rgb(250, 250, 250);
+            color: #007BFF;
             font-weight: bold;
             vertical-align: top;
         }
 
         img {
             max-width: 100%;
-            height: 20;
             border-radius: 8px;
             margin-bottom: 10px;
         }
