--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
         <p>--- Homework 2 ---<br><br>covariance, correlation & distance<br>multivariate distribution<br>PCA</p>
     </a>
 
+    <a href='homework-03/xiuyucao_hw3.html'>
+        <img src='webpage_image/3.png' alt='Homework 3'>
+        <p>--- Homework 3 ---<br><br>Correspondence Analysis<br>Linear Regression<br>PCA & Cluster Recap</p>
+    </a>
+
 </body>
 
 </html>
